--- a/css/style.production.css
+++ b/css/style.production.css
@@ -259,6 +259,17 @@ textarea {
     width: 100px;
 }
 
+.github-link {
+    display: inline-block;
+    line-height: 0;
+}
+
+.project-links {
+display: flex;
+align-items: flex-start;
+justify-content: space-between;
+}
+
 @supports (display: grid) {
     .grid {
         display: -ms-grid;
@@ -275,15 +286,24 @@ textarea {
         width: auto;
         min-height: auto;
         margin: 0;
+        border-radius: 5px;
+        box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 50%);
+        display: flex;
+        flex-direction: column;
     }
 
-    .grid__item:last-child {
+    .grid__item img {
+        margin: 0 auto;
+        display: inline-block;
+    }
+
+    /* .grid__item:last-child {
         -ms-grid-column: 3;
         grid-column: 3 / 3;
         -ms-grid-row: 1;
         -ms-grid-row-span: 2;
         grid-row: 1 / 3;
-    }
+    } */
 }
 
 @media all and (max-width: 500px) {
