--- a/css/style.production.css
+++ b/css/style.production.css
@@ -12,19 +12,23 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100vh;
+}
+
 html,
 body {
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 body {
+    color: white;
     position: relative;
-    background-color: #e1e0e3;
+    background-color: #373737;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
-    padding: 16px;
 }
 
 h1 {
@@ -146,29 +150,56 @@ textarea {
     color: #2b2b2b;
 }
 
-.navigation-list__item--active {
-    text-decoration: none;
-}
+/* filter: brightness(80%);
+background-color: #e1e0e3; */
 
 .navigation-list li {
     display: inline-block;
-    margin-left: 15px;
+    padding: 8px;
+    margin: 0;
+    text-decoration: none;
+}
+
+.navigation-list li:hover,
+.navigation-list li.active {
+    filter: brightness(85%);
+    background: #a04a86;
+    border-radius: 5px;
+}
+
+.navigation-list li a {
+    color: white;
+    text-decoration: none;
+}
+
+.navigation-list li a:visited {
+    color: white;
+    text-decoration: none;
 }
 
 .link--no-underline {
     text-decoration: none;
+    
 }
 
 .profile {
-    max-width: 700px;
+    width: 70%;
     margin: 0 auto;
+}
+
+.profile-container {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
 
 .profile__portrait {
     margin-right: 20px;
+    height: 250px;
     width: 250px;
-    float: left;
+    /* float: left; */
     border-radius: 50%;
+    filter: saturate(50%);
 }
 
 .page-header {
@@ -176,13 +207,27 @@ textarea {
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    padding: 10px;
+    padding: 0 10px;
+    background-color: rgb(44, 44, 44);
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.logo-container img {
+    object-fit: cover;
+    width: 100%;
+    height: 55px;
+    filter: invert(100%);
 }
 
 .page-header__item {
     -webkit-box-flex: 0;
     -ms-flex: 0 1 200px;
-    flex: 0 1 200px;
+    flex: 0 1 100px;
 }
 
 .page-header__item:first-child {
@@ -198,25 +243,14 @@ textarea {
 }
 
 .page-footer {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    margin-bottom: 16px;
+    justify-content: center;
+    align-items: center;
 }
 
 .projects-container {
-    margin-bottom: 100px;
+    padding: 16px;
 }
 
 .skills-table {
@@ -249,9 +283,12 @@ textarea {
 
 .cologne-picture {
     margin: 0 auto;
-    margin-top: -50px;
-    margin-bottom: 16px;
-    display: block;
+    margin-top: -55px;
+    margin-bottom: -55px;
+    object-fit: cover;
+    height: 300px;
+    width: 318px;
+    display: inline-block;
 }
 
 .standard-label {
@@ -262,12 +299,13 @@ textarea {
 .github-link {
     display: inline-block;
     line-height: 0;
+    filter: invert(1);
 }
 
 .project-links {
-display: flex;
-align-items: flex-start;
-justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 @supports (display: grid) {
@@ -282,7 +320,7 @@ justify-content: space-between;
     }
 
     .grid__item {
-        background-color: #dcd7d7;
+        background-color: #2c2c2c;
         width: auto;
         min-height: auto;
         margin: 0;
@@ -290,6 +328,7 @@ justify-content: space-between;
         box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 50%);
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
     }
 
     .grid__item img {
@@ -304,6 +343,15 @@ justify-content: space-between;
         -ms-grid-row-span: 2;
         grid-row: 1 / 3;
     } */
+}
+
+.project-description {
+    display: flex;
+    flex-direction: column;
+}
+
+.github-anchor-tag {
+    display: flex;
 }
 
 @media all and (max-width: 500px) {
@@ -384,4 +432,58 @@ justify-content: space-between;
 .windows {
     -webkit-animation: 4s letters-color infinite alternate linear;
     animation: 4s letters-color infinite alternate linear;
+}
+
+.social-icons {
+    filter: invert(100%);
+}
+
+.about-me-container {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me-container--top {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 64px;
+}
+
+.contact-container {
+    text-align: center;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    filter: invert(1);
+    margin-bottom: 64px;
+}
+
+.contact-mail {
+    text-decoration: underline;
+    color: #a196a7;
+}
+
+.cat {
+    margin-top: 32px;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    justify-content: space-between;
+}
+
+.flex-container--contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    gap: 64px;
 }
